--- a/pom.xml
+++ b/pom.xml
@@ -90,8 +90,8 @@
 
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk15on</artifactId>
-            <version>1.70</version>
+            <artifactId>bcpkix-jdk15on</artifactId>
+            <version>1.67</version>
         </dependency>
 
         <dependency>
